Fix website moving to the side on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -83,6 +83,7 @@ body{
     padding: 0;
     font-family: 'Poppins-Regular';
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 .trigger{
     height: 200px;
@@ -434,9 +435,10 @@ body{
     margin-top: 0em !important;
 }
 .wrapper{
-    scroll-behavior: smooth;
+    overflow: hidden;
 }
 .body{
+    
     background: #f5f5f5;
     padding: 5em 0em 4em 0em;
     .features{
@@ -924,6 +926,7 @@ body{
         }
     }
     .body{
+        overflow: hidden;
         .features{
             flex-direction: column;
             justify-content: center;
